# shopify-rextant

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md
.agents/skills/shopify-rextant/: SKILL.md
.agents/skills/shopify-rextant-dev/: SKILL.md
.github/workflows/: ci.yml
benches/: release_contract.rs
docs/dev/: architecture.md  release.md  testing.md
docs/plans/: 2026-04-17-001-feat-v030-freshness-changelog-plan.md  2026-04-17-002-feat-v040-continuous-improvement-plan.md  2026-04-18-001-feat-v050-on-demand-fetch-plan.md  2026-04-18-002-feat-shared-mcp-daemon-plan.md  2026-04-19-001-refactor-main-rs-plan.md  v0.5-on-demand-fetch.md
docs/user/: cli.md  config.md  install.md  mcp.md  troubleshooting.md
src/: build.rs  cli.rs  config.rs  coverage.rs  doc_freshness.rs  fetch.rs  lib.rs  main.rs  map_runtime.rs  markdown.rs  mcp_framing.rs  on_demand.rs  refresh.rs  source_sync.rs  status.rs  tests.rs  url_policy.rs
src/changelog/: feed.rs  impact.rs  mod.rs  poll.rs  types.rs
src/db/: changelog.rs  concepts.rs  coverage.rs  docs.rs  graph.rs  meta.rs  mod.rs  schema.rs
src/domain/: concepts.rs  coverage.rs  docs.rs  fetch.rs  graph.rs  map.rs  mod.rs  source.rs  status.rs
src/graphql/: build.rs  mod.rs  resolve.rs  schema_urls.rs
src/map/: mod.rs  plan.rs  warnings.rs
src/mcp/: daemon.rs  mod.rs  protocol.rs  server.rs  workers.rs
src/search/: index_io.rs  mod.rs  runtime.rs  schema.rs  tokenizer.rs
src/source/: mod.rs  reqwest_source.rs  text_source.rs
src/util/: hash.rs  json.rs  mod.rs  time.rs
