[package]
name = "shopify-rextant"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local-first MCP server that maps Shopify developer documentation."

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
rmcp = { version = "1.4", features = ["server", "macros", "transport-io", "schemars"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = "0.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
tempfile = "3"
