[package]
name = "shopify-rextant"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Local-first MCP server that maps Shopify developer documentation."
readme = "README.md"
repository = "https://github.com/ryo-morimoto/shopify-rextant"
keywords = ["shopify", "mcp", "docs", "search", "cli"]
categories = ["command-line-utilities"]
include = [
  "/LICENSE",
  "/README.md",
  "/benches",
  "/src",
]

[[bench]]
name = "release_contract"
harness = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
feed-rs = "2.3.1"
lindera = { version = "2.0.1", features = ["embed-ipadic"] }
lindera-tantivy = { version = "2.0.0", features = ["embed-ipadic"] }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
rmcp = { version = "1.4", features = ["server", "macros", "transport-io", "schemars"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = "0.25"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
